--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Morse DeCoder</string>
     <string name="action_settings">Settings</string>
+    <string name="blocked_permission">Permission necessary for this application to function, RECORD_AUDIO is unavailable on this device</string>
+    <string name="denied_permission">Permission necessary for this application to function, RECORD_AUDIO was denied, to grant it go to settings/applications</string>
 </resources>
